hotpatch old template used in ddcc to work with 1.x requirements

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,8 @@ install:
     # and CD into the renpy
     
     - bash ./ddcc/travis/setup.sh
-    
-    # Remove README.html to prevent errors.
-    - rm -rf ddcc/sample_mod/README.html && cp -vRf ddcc/* mod/game
+
+    - rsync -av --progress ddcc/* game/mod --exclude game --exclude .travis.yml --exclude travis 
     
     - bash ddcc/travis/inject_version.sh
     
