--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ env:
 # This is the script part. This is where the actual building is happening.
 # This produces an artifact which we'll use later on to publish a release.
 
-script: ./renpy.sh "../mod/" lint && ./renpy.sh launcher distribute "../mod/" && cd ..
+script: ./renpy.sh "../mod/" lint && ./renpy.sh launcher distribute "../mod/" && cd .. && ls
 
 
 # This is where the actual releases happen. Travis has the ability to publish releases from GitHub, Amazon S3, OpenShift, etc.
