--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ env:
 # This is the script part. This is where the actual building is happening.
 # This produces an artifact which we'll use later on to publish a release.
 
-script: ./renpy.sh "../mod/" lint && ./renpy.sh launcher distribute "../mod/" && cd .. && ls
+script: ./renpy.sh "../mod/" lint && ./renpy.sh launcher distribute "../mod/" && cd .. 
 
 
 # This is where the actual releases happen. Travis has the ability to publish releases from GitHub, Amazon S3, OpenShift, etc.
@@ -52,7 +52,7 @@ deploy:
     # Head to Settings > Environment variables and set this.
     secure: $GITHUB_API_KEY
   file_glob: true
-  file: "*-dists/*-Mod.zip"
+  file: "*-dists/*.zip"
   skip_cleanup: true
   on:
     tags: true # your mods only builds and uploads releases on a GitHub Git tag so make sure you tag and release accordingly!
